Implement Sidebar Modals (AddProductsForm, AddSuppliersForm, AddCustomersForm)

--- a/frontend_PharmaPulse/src/components/Footer/Footer.css
+++ b/frontend_PharmaPulse/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   background-color: #c1ddc1;
-  color: #5e5959;
+  color: #333;
   font-family: Seravek, sans-serif;
   padding: 15px 20px;
   position: fixed;
