--- a/frontend_PharmaPulse/src/index.css
+++ b/frontend_PharmaPulse/src/index.css
@@ -3,18 +3,18 @@
 @tailwind utilities;
 
 /* index.css or App.css */
-
+html,
 body {
-    margin: 0;
-    font-family: "Arial", sans-serif;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background-image: url('./loginBg.webp'); /* Path to the image */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed; /* Fix the background */
-    background-color: black; /* Fallback color */
-  }
-  
+  margin: 0;
+  font-family: "Arial", sans-serif;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-image: url("./loginBg.webp"); /* Path to the image */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* Fix the background */
+  background-color: black; /* Fallback color */
+  overflow: hidden;
+}
