--- a/frontend_PharmaPulse/src/App.css
+++ b/frontend_PharmaPulse/src/App.css
@@ -1,3 +1,28 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*  App.css */
+html,
+body {
+  margin: 0;
+  font-family: "Arial", sans-serif;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-image: url("./loginBg.webp"); /* Path to the image */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* Fix the background */
+  background-color: black; /* Fallback color */
+  overflow: hidden;
+  color: var(--text-color);
+  background-color: var(--bg-color);
+  
+  
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
